clusters/demo-000/apps/demoapp-home/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demoapp-home-dev
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
