clusters/demo-000/apps/demoapp-home/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
  name: demoapp-home-movie
spec:
  ingressClassName: nginx
  rules:
  - host: prod.movie.demoapp-home.example.com
    http:
      paths:
      - backend:
          service:
            name: demoapp-home-movie
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - prod.movie.demoapp-home.example.com
    secretName: prod-demoapp-home-com-tls
